# 2dybich

./: .gitignore  README.md  main.ipynb  pyproject.toml
.github/workflows/: sprawozdanie.yml  sprawozdanie_lab1.yml  sprawozdanie_lab2.yml  sprawozdanie_lab3.yml  sprawozdanie_project.yml
lab4/: CWL.ipynb
labs/lab1/: main.ipynb
labs/lab2/: main.ipynb
labs/lab3/: main.ipynb
labs/lab4/: main.ipynb
labs/project/: main.ipynb
labs/project/src/: source.py
